<resources>
    <string name="app_name">NewsBuddy</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_category">Category</string>
    <string name="nav_favorite">Favorite</string>
    <string name="nav_contact">Contact</string>
    <string name="nav_about_us">About Us</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Category</item>
        <item>Favorite</item>
        <item>Contact</item>
    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="action_share">Share</string>
    <string name="action_favorite">Favorite</string>
    <string name="action_category">Category</string>
    <string name="action_search">Search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image_for_news" >THis New Demo</string>

</resources>