<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:orderInCategory="10"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/action_search"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_cateory"
        android:orderInCategory="100"
        android:icon="@drawable/ic_local_library_white_24dp"
        android:title="@string/action_category"

        app:showAsAction="always" />
    <item
        android:id="@+id/action_favorite"
        android:orderInCategory="100"
        android:icon="@drawable/ic_favorite_white_24dp"
        android:title="@string/action_favorite"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_share"
        android:orderInCategory="100"
        android:icon="@drawable/ic_share_black_24dp"
        android:title="@string/action_share"
        app:showAsAction="always" />

</menu>